--- a/org.grife/build.properties
+++ b/org.grife/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml
+               contexts.xml,\
+               deps/groovy-all-2.4.7.jar
